Add review first round

--- a/src/_includes/partials/footer.html
+++ b/src/_includes/partials/footer.html
@@ -1,4 +1,4 @@
-<div class="relative z-50 bg-pink-dark">
+<div class="relative z-50 bg-pink-dark border-t-[5px] border-solid border-pink-medium">
 	<div class="container pb-10 md:pb-[60px] md:pt-[50px]">
 		<a
 			href="/"
