--- a/src/_includes/partials/header.html
+++ b/src/_includes/partials/header.html
@@ -4,7 +4,7 @@
 			'bg-pink-medium': $store.mobileMenu.isOpen
 	}"
 >
-	<div class="container py-12 lg:py-16 xl:py-20">
+	<div class="container py-8 md:py-12 lg:py-16 xl:py-20">
 		<div class="flex items-center justify-center gap-10 lg:justify-between">
 			<a
 				href="/"
@@ -147,7 +147,7 @@
 				<svg
 					xmlns="http://www.w3.org/2000/svg"
 					viewBox="0 0 24 24"
-					class="h-6 w-6 text-lime"
+					class="h-[27px] text-lime"
 				>
 					<path
 						fill="currentColor"
@@ -159,7 +159,7 @@
 				<svg
 					xmlns="http://www.w3.org/2000/svg"
 					viewBox="0 0 24 24"
-					class="h-6 w-6 text-lime"
+					class="h-[27px] text-lime"
 				>
 					<path
 						fill="currentColor"
@@ -171,7 +171,7 @@
 				<svg
 					xmlns="http://www.w3.org/2000/svg"
 					viewBox="0 0 24 24"
-					class="h-6 w-6 text-lime"
+					class="h-[27px] text-lime"
 				>
 					<path
 						fill="currentColor"
