--- a/src/pages/about.njk
+++ b/src/pages/about.njk
@@ -17,7 +17,7 @@ layout: "layouts/base.html"
 	</div>
 </div>
 <div class="relative overflow-hidden">
-	<div class="absolute -left-6 top-[58rem] sm:top-[55rem] lg:top-[62rem] xl:top-[42rem] 2xl:top-[38rem]">
+	<div class="absolute -left-6 top-[60rem] sm:top-[55rem] lg:top-[62rem] xl:top-[42rem] 2xl:top-[38rem]">
 		<img
 			src="/assets/img/kiss-pink-dark.png"
 			class="h-24 rotate-[-25deg] transform sm:h-28 xl:h-36 2xl:h-[10.5rem]"
@@ -53,8 +53,12 @@ layout: "layouts/base.html"
 						<div class="mt-10 md:mt-7">
 							<a
 								href="/"
-								class="btn btn-primary !bg-[#e5055b] text-center md:!px-10"
-								>Plan jouw afspraak online</a
+								class="btn btn-primary border border-pink-medium text-center"
+								>
+								<span class="btn-content md:!px-10">
+									Plan jouw afspraak online
+								</span>
+								</a
 							>
 						</div>
 					</div>
@@ -105,52 +109,52 @@ layout: "layouts/base.html"
 						<span>
 							<img
 								src="/assets/img/madeline.jpg"
-								class="h-[250px] w-full rounded-[25px] object-cover object-top md:h-[280px] lg:h-[200px] xl:h-[250px]"
+								class="h-[250px] w-full rounded-[15px] md:rounded-[25px] object-cover object-top md:h-[280px] lg:h-[200px] xl:h-[250px]"
 								alt="madeline photo - team member"
 							/>
 						</span>
 						<span class="block pt-2 md:pt-3">
-							<span class="text-h-5 block font-bold">Madeline</span>
-							<span class="text-h-5 block">Wimper styliste </span>
+							<span class="text-lg block font-bold">Madeline</span>
+							<span class="text-lg block">Wimper styliste </span>
 						</span>
 					</div>
 					<div>
 						<span>
 							<img
 								src="/assets/img/manon.jpg"
-								class="h-[250px] w-full rounded-[25px] object-cover object-top md:h-[280px] lg:h-[200px] xl:h-[250px]"
+								class="h-[250px] w-full rounded-[15px] md:rounded-[25px] object-cover object-top md:h-[280px] lg:h-[200px] xl:h-[250px]"
 								alt="manon photo - team member"
 							/>
 						</span>
 						<span class="block pt-2 md:pt-3">
-							<span class="text-h-5 block font-bold">Manon</span>
-							<span class="text-h-5 block">Pmu artist</span>
+							<span class="text-lg block font-bold">Manon</span>
+							<span class="text-lg block">Pmu artist</span>
 						</span>
 					</div>
 					<div>
 						<span>
 							<img
 								src="/assets/img/claudia.jpg"
-								class="h-[250px] w-full rounded-[25px] object-cover object-top md:h-[280px] lg:h-[200px] xl:h-[250px]"
+								class="h-[250px] w-full rounded-[15px] md:rounded-[25px] object-cover object-top md:h-[280px] lg:h-[200px] xl:h-[250px]"
 								alt="claudia photo - team member"
 							/>
 						</span>
 						<span class="block pt-2 md:pt-3">
-							<span class="text-h-5 block font-bold">Claudia Jacobs</span>
-							<span class="text-h-5 block">Fillerexpert en CEO</span>
+							<span class="text-lg block font-bold">Claudia Jacobs</span>
+							<span class="text-lg block">Fillerexpert en CEO</span>
 						</span>
 					</div>
 					<div>
 						<span>
 							<img
 								src="/assets/img/omaima.jpg"
-								class="h-[250px] w-full rounded-[25px] object-cover object-top md:h-[280px] lg:h-[200px] xl:h-[250px]"
+								class="h-[250px] w-full rounded-[15px] md:rounded-[25px] object-cover object-top md:h-[280px] lg:h-[200px] xl:h-[250px]"
 								alt="omaima photo - team member"
 							/>
 						</span>
 						<span class="block pt-2 md:pt-3">
-							<span class="text-h-5 block font-bold">Omaima</span>
-							<span class="text-h-5 block">Chirurg en cosmetische arts</span>
+							<span class="text-lg block font-bold">Omaima</span>
+							<span class="text-lg block">Chirurg en cosmetische arts</span>
 						</span>
 					</div>
 				</div>
