--- a/src/pages/contact.njk
+++ b/src/pages/contact.njk
@@ -36,11 +36,11 @@ layout: "layouts/base.html"
 				</span>
 				<span class="text-h-5 pt-6 block">
 					Benieuwd hoe FillerHouse jouw wereld een stukje mooier kan maken?
-					<span class="block font-bold text-pink"> Neem contact op! </span>
+					<span class="block font-bold text-pink italic"> Neem contact op! </span>
 				</span>
 				<div>
 					<ul class="relative z-20 pt-6 md:pt-7 flex flex-col md:flex-row gap-2.5 md:gap-5 xl:w-[92%]">
-						<li class="w-full md:w-[41%] rounded-[40px] bg-white px-[18px] py-5 shadow-[5px_5px_25px_rgba(240,186,212,0.18)] md:px-7 md:py-7 xl:px-12 xl:py-[34px]">
+						<li class="w-full md:w-[41%] rounded-[25px] md:rounded-[40px] bg-white px-[18px] py-5 shadow-[5px_5px_25px_rgba(240,186,212,0.18)] md:px-7 md:py-7 xl:px-12 xl:py-[34px]">
 							<span
 								href=""
 								class="flex items-center gap-3.5"
@@ -64,7 +64,7 @@ layout: "layouts/base.html"
 								</span>
 							</span>
 						</li>
-						<li class="w-full md:w-[59%] rounded-[40px] bg-white px-[18px] py-5 shadow-[5px_5px_25px_rgba(240,186,212,0.18)] md:px-7 md:py-7 xl:px-12 xl:py-[34px]">
+						<li class="w-full md:w-[59%] rounded-[25px] md:rounded-[40px] bg-white px-[18px] py-5 shadow-[5px_5px_25px_rgba(240,186,212,0.18)] md:px-7 md:py-7 xl:px-12 xl:py-[34px]">
 							<a
 								href=""
 								class="text-h-5 flex items-center gap-3.5 !leading-[26px] text-black sm:leading-[26px]"
@@ -95,7 +95,7 @@ layout: "layouts/base.html"
 						>
 						<input
 							type="text"
-							class="focus:border-#d4d4d4 ring-#d4d4d4 ring-offset-#d4d4d4 block w-full rounded-[15px] lg:border-0 bg-white px-8 py-[22px] text-lg/[25px] text-black lg:rounded-[40px] border border-solid border-[#cccccc]"
+							class="focus:border-[#d4d4d4] focus:ring-0 focus:outline-none block w-full rounded-[15px] border border-solid border-transparent bg-white px-8 py-[22px] text-lg/[25px] text-black lg:rounded-[40px]"
 						/>
 					</div>
 					<div class="pb-[18px] lg:pb-[22px]">
@@ -104,7 +104,7 @@ layout: "layouts/base.html"
 						>
 						<input
 							type="text"
-							class="focus:border-#d4d4d4 ring-#d4d4d4 ring-offset-#d4d4d4 block w-full rounded-[15px] lg:border-0 bg-white px-8 py-[22px] text-lg/[25px] text-black lg:rounded-[40px] border border-solid border-[#cccccc]"
+							class="focus:border-[#d4d4d4] focus:ring-0 focus:outline-none block w-full rounded-[15px] border border-solid border-transparent bg-white px-8 py-[22px] text-lg/[25px] text-black lg:rounded-[40px]"
 						/>
 					</div>
 					<div class="pb-[18px] lg:pb-[22px]">
@@ -113,7 +113,7 @@ layout: "layouts/base.html"
 						>
 						<input
 							type="text"
-							class="focus:border-#d4d4d4 ring-#d4d4d4 ring-offset-#d4d4d4 block w-full rounded-[15px] lg:border-0 bg-white px-8 py-[22px] text-lg/[25px] text-black lg:rounded-[40px] border border-solid border-[#cccccc]"
+							class="focus:border-[#d4d4d4] focus:ring-0 focus:outline-none block w-full rounded-[15px] border border-solid border-transparent bg-white px-8 py-[22px] text-lg/[25px] text-black lg:rounded-[40px]"
 						/>
 					</div>
 					<div class="pb-[11px] lg:pb-[19px]">
@@ -125,12 +125,16 @@ layout: "layouts/base.html"
 							id=""
 							cols="30"
 							rows="3"
-							class="focus:border-#d4d4d4 ring-#d4d4d4 ring-offset-#d4d4d4 block w-full rounded-[15px] lg:border-0 bg-white px-8 py-[22px] text-lg/[25px] text-black lg:rounded-[40px] border border-solid border-[#cccccc]"
+							class="focus:border-[#d4d4d4] focus:ring-0 focus:outline-none block w-full rounded-[15px] border border-solid border-transparent bg-white px-8 py-[22px] text-lg/[25px] text-black lg:rounded-[40px]"
 						></textarea>
 					</div>
 					<div class="flex flex-col-reverse gap-7 md:flex-row md:gap-12">
 						<div>
-							<button class="btn btn-primary shrink-0 px-[3rem] md:!px-[3.25rem]">Verzenden</button>
+							<button class="btn btn-primary shrink-0">
+								<span class="btn-content px-[3rem] md:!px-[3.25rem]">
+									Verzenden
+								</span>
+							</button>
 						</div>
 						<span class="text-sm/[22px] text-[#7a7a7a]"
 							>Met het versturen van deze gegevens ga je akkoord met onze
