--- a/src/pages/fillers.njk
+++ b/src/pages/fillers.njk
@@ -41,8 +41,12 @@ layout: "layouts/base.html"
 						<div class="mt-10 md:mt-8">
 							<a
 								href="/"
-								class="btn btn-primary text-center md:!px-10"
-								>Plan jouw afspraak online</a
+								class="btn btn-primary text-center"
+								>
+								<span class="btn-content md:!px-10">
+									Plan jouw afspraak online
+								</span>
+								</a
 							>
 						</div>
 					</div>
@@ -197,8 +201,12 @@ layout: "layouts/base.html"
 						<div class="mt-10 flex justify-center md:mt-8">
 							<a
 								href="/"
-								class="btn btn-primary text-center md:!px-10"
-								>Plan jouw afspraak online</a
+								class="btn btn-primary text-center"
+								>
+								<span class="btn-content md:!px-10">
+									Plan jouw afspraak online
+								</span>
+								</a
 							>
 						</div>
 					</div>
@@ -277,8 +285,10 @@ layout: "layouts/base.html"
 							<div class="mt-6">
 								<a
 									href="/"
-									class="btn btn-primary text-center md:!px-10"
-									>Plan jouw afspraak online</a
+									class="btn btn-primary text-center"
+									>
+									<span class="btn-content md:!px-10">Plan jouw afspraak online</span>
+									</a
 								>
 							</div>
 						</div>
@@ -303,8 +313,10 @@ layout: "layouts/base.html"
 							<div class="mt-5 flex md:justify-center">
 								<a
 									href="/"
-									class="btn btn-primary text-center md:!px-10"
-									>Meer over Botox</a
+									class="btn btn-primary text-center"
+									><span class="btn-content md:!px-10">
+										Meer over Botox
+									</span></a
 								>
 							</div>
 						</div>
