--- a/src/pages/services.njk
+++ b/src/pages/services.njk
@@ -38,11 +38,11 @@ layout: "layouts/base.html"
 				>
 			</div>
 			<div class="grid grid-cols-1 gap-7 pt-12 lg:grid-cols-2 lg:pt-16 xl:gap-11 xl:pt-24">
-				<div class="rounded-[25px] bg-white text-center">
+				<div class="text-center">
 					<span>
-						<img src="/assets/img/services-8.jpg" class="rounded-t-[25px] h-[225px] md:h-[357px] w-full object-cover" alt="botox image">
+						<img src="/assets/img/services-8.jpg" class="rounded-t-[15px] md:rounded-t-[25px] h-[225px] md:h-[357px] w-full object-cover" alt="botox image">
 					</span>
-					<div class="px-4 pb-7 pt-7 md:px-8 xl:px-11 xl:pb-8">
+					<div class="px-4 pb-7 pt-7 md:px-8 xl:px-11 xl:pb-8 bg-white rounded-[15px] md:rounded-b-[25px]">
 						<h3 class="text-h-4 xl:text-h-3 pb-4 font-bold xl:pb-6">Botox</h3>
 						<p class="text-h-5 lg:line-clamp-4 lg:min-h-[128px]">
 							Omdat botox de activiteit van de spieren vermindert, is het ideaal om rimpels te verminderen die ontstaan
@@ -52,17 +52,17 @@ layout: "layouts/base.html"
 						<div class="mt-10 flex justify-center md:mt-7">
 							<a
 								href="/"
-								class="btn btn-primary !bg-[#e5055b] text-center md:!px-10"
-								>Meer over Botox</a
+								class="btn btn-primary border border-pink-medium text-center"
+								> <span class="btn-content md:!px-10">Meer over Botox</span></a
 							>
 						</div>
 					</div>
 				</div>
-				<div class="rounded-[25px] bg-white text-center">
+				<div class="text-center">
 					<span>
-						<img src="/assets/img/services-9.jpg" class="rounded-t-[25px] h-[225px] md:h-[357px] w-full object-cover" alt="fillers image">
+						<img src="/assets/img/services-9.jpg" class="rounded-t-[15px] md:rounded-t-[25px] h-[225px] md:h-[357px] w-full object-cover" alt="fillers image">
 					</span>
-					<div class="px-4 pb-7 pt-7 md:px-8 xl:px-11 xl:pb-8">
+					<div class="px-4 pb-7 pt-7 md:px-8 xl:px-11 xl:pb-8 bg-white rounded-[15px] md:rounded-b-[25px]">
 						<h3 class="text-h-4 xl:text-h-3 pb-4 font-bold xl:pb-6">Fillers</h3>
 						<p class="text-h-5 lg:line-clamp-4 lg:min-h-[128px]">
 							Omdat botox de activiteit van de spieren vermindert, is het ideaal om rimpels te verminderen die ontstaan
@@ -72,21 +72,21 @@ layout: "layouts/base.html"
 						<div class="mt-10 flex justify-center md:mt-7">
 							<a
 								href="/"
-								class="btn btn-primary !bg-[#e5055b] text-center md:!px-10"
-								>Meer over Fillers</a
+								class="btn btn-primary border border-pink-medium text-center"
+								> <span class="btn-content md:!px-10">Meer over Fillers</span></a
 							>
 						</div>
 					</div>
 				</div>
-				<div class="rounded-[25px] bg-white text-center">
+				<div class="text-center">
 					<span>
 						<img
 							src="/assets/img/services-10.jpg"
-							class="h-[225px] w-full rounded-t-[25px] object-cover md:h-[357px]"
+							class="h-[225px] w-full rounded-t-[15px] md:rounded-t-[25px] object-cover md:h-[357px]"
 							alt="PDO Draadlift image"
 						/>
 					</span>
-					<div class="px-4 pb-7 pt-7 md:px-8 xl:px-11 xl:pb-8">
+					<div class="px-4 pb-7 pt-7 md:px-8 xl:px-11 xl:pb-8 bg-white rounded-[15px] md:rounded-b-[25px]">
 						<h3 class="text-h-4 xl:text-h-3 pb-4 font-bold xl:pb-6">PDO Draadlift</h3>
 						<p class="text-h-5 lg:line-clamp-4 lg:min-h-[128px]">
 							Een draadlift behandeling is ideaal voor het liften van het gezicht zonder operatie!
@@ -94,21 +94,21 @@ layout: "layouts/base.html"
 						<div class="mt-10 flex justify-center md:mt-7">
 							<a
 								href="/"
-								class="btn btn-primary !bg-[#e5055b] text-center md:!px-10"
-								>Meer over de PDO Draadlift</a
+								class="btn btn-primary border border-pink-medium text-center"
+								> <span class="btn-content md:!px-10">Meer over de PDO Draadlift</span></a
 							>
 						</div>
 					</div>
 				</div>
-				<div class="rounded-[25px] bg-white text-center">
+				<div class="text-center">
 					<span>
 						<img
 							src="/assets/img/services-11.jpg"
-							class="h-[225px] w-full rounded-t-[25px] object-cover md:h-[357px]"
+							class="h-[225px] w-full rounded-t-[15px] md:rounded-t-[25px] object-cover md:h-[357px]"
 							alt="Lipo injections image"
 						/>
 					</span>
-					<div class="px-4 pb-7 pt-7 md:px-8 xl:px-11 xl:pb-8">
+					<div class="px-4 pb-7 pt-7 md:px-8 xl:px-11 xl:pb-8 bg-white rounded-[15px] md:rounded-b-[25px]">
 						<h3 class="text-h-4 xl:text-h-3 pb-4 font-bold xl:pb-6">Lipo injections</h3>
 						<p class="text-h-5 lg:line-clamp-4 lg:min-h-[128px]">
 							Bij lipo injections worden de werkzame stoffen direct onder de huid in het vetweefsel aangebracht. De
@@ -118,21 +118,21 @@ layout: "layouts/base.html"
 						<div class="mt-10 flex justify-center md:mt-7">
 							<a
 								href="/"
-								class="btn btn-primary !bg-[#e5055b] text-center md:!px-10"
-								>Meer over Lipo injections</a
+								class="btn btn-primary border border-pink-medium text-center"
+								> <span class="btn-content md:!px-10">Meer over Lipo injections</span></a
 							>
 						</div>
 					</div>
 				</div>
-				<div class="rounded-[25px] bg-white text-center">
+				<div class="text-center">
 					<span>
 						<img
 							src="/assets/img/services-12.jpg"
-							class="h-[225px] w-full rounded-t-[25px] object-cover md:h-[357px]"
+							class="h-[225px] w-full rounded-t-[15px] md:rounded-t-[25px] object-cover md:h-[357px]"
 							alt="Semi permanente make-up image"
 						/>
 					</span>
-					<div class="px-4 pb-7 pt-7 md:px-8 xl:px-11 xl:pb-8">
+					<div class="px-4 pb-7 pt-7 md:px-8 xl:px-11 xl:pb-8 bg-white rounded-[15px] md:rounded-b-[25px]">
 						<h3 class="text-h-4 xl:text-h-3 pb-4 font-bold xl:pb-6">Semi permanente make-up</h3>
 						<p class="text-h-5 lg:line-clamp-4 lg:min-h-[128px]">
 							Wil jij ‘s ochtends meteen ready to go zijn en uren make-up tijd besparen? Dan is semi permanente make-up
@@ -142,41 +142,41 @@ layout: "layouts/base.html"
 						<div class="mt-10 flex justify-center md:mt-7">
 							<a
 								href="/"
-								class="btn btn-primary !bg-[#e5055b] text-center md:!px-10"
-								>Meer over PMU</a
+								class="btn btn-primary border border-pink-medium text-center"
+								> <span class="btn-content md:!px-10">Meer over PMU</span></a
 							>
 						</div>
 					</div>
 				</div>
-				<div class="rounded-[25px] bg-white text-center">
+				<div class="text-center">
 					<span>
 						<img
 							src="/assets/img/services-13.jpg"
-							class="h-[225px] w-full rounded-t-[25px] object-cover md:h-[357px]"
+							class="h-[225px] w-full rounded-t-[15px] md:rounded-t-[25px] object-cover md:h-[357px]"
 							alt="Peelings image"
 						/>
 					</span>
-					<div class="px-4 pb-7 pt-7 md:px-8 xl:px-11 xl:pb-8">
+					<div class="px-4 pb-7 pt-7 md:px-8 xl:px-11 xl:pb-8 bg-white rounded-[15px] md:rounded-b-[25px]">
 						<h3 class="text-h-4 xl:text-h-3 pb-4 font-bold xl:pb-6">Peelings</h3>
 						<p class="text-h-5 lg:line-clamp-4 lg:min-h-[128px]">Nog geen tekst</p>
 						<div class="mt-10 flex justify-center md:mt-7">
 							<a
 								href="/"
-								class="btn btn-primary !bg-[#e5055b] text-center md:!px-10"
-								>Meer over Peelings</a
+								class="btn btn-primary border border-pink-medium text-center"
+								> <span class="btn-content md:!px-10">Meer over Peelings</span></a
 							>
 						</div>
 					</div>
 				</div>
-				<div class="rounded-[25px] bg-white text-center">
+				<div class="text-center">
 					<span>
 						<img
 							src="/assets/img/services-14.jpg"
-							class="h-[225px] w-full rounded-t-[25px] object-cover md:h-[357px]"
+							class="h-[225px] w-full rounded-t-[15px] md:rounded-t-[25px] object-cover md:h-[357px]"
 							alt="Brows image"
 						/>
 					</span>
-					<div class="px-4 pb-7 pt-7 md:px-8 xl:px-11 xl:pb-8">
+					<div class="px-4 pb-7 pt-7 md:px-8 xl:px-11 xl:pb-8 bg-white rounded-[15px] md:rounded-b-[25px]">
 						<h3 class="text-h-4 xl:text-h-3 pb-4 font-bold xl:pb-6">Brows</h3>
 						<p class="text-h-5 lg:line-clamp-4 lg:min-h-[128px]">
 							Jouw wenkbrauwen in perfect shape bij FillerHouse! Tijdens een van de Brows classic behandelingen brengen
@@ -186,28 +186,28 @@ layout: "layouts/base.html"
 						<div class="mt-10 flex justify-center md:mt-7">
 							<a
 								href="/"
-								class="btn btn-primary !bg-[#e5055b] text-center md:!px-10"
-								>Meer over Brows</a
+								class="btn btn-primary border border-pink-medium text-center"
+								> <span class="btn-content md:!px-10">Meer over Brows</span></a
 							>
 						</div>
 					</div>
 				</div>
-				<div class="rounded-[25px] bg-white text-center">
+				<div class="text-center">
 					<span>
 						<img
 							src="/assets/img/services-15.jpg"
-							class="h-[225px] w-full rounded-t-[25px] object-cover md:h-[357px]"
+							class="h-[225px] w-full rounded-t-[15px] md:rounded-t-[25px] object-cover md:h-[357px]"
 							alt="fillers image"
 						/>
 					</span>
-					<div class="px-4 pb-7 pt-7 md:px-8 xl:px-11 xl:pb-8">
+					<div class="px-4 pb-7 pt-7 md:px-8 xl:px-11 xl:pb-8 bg-white rounded-[15px] md:rounded-b-[25px]">
 						<h3 class="text-h-4 xl:text-h-3 pb-4 font-bold xl:pb-6">Wimpers</h3>
 						<p class="text-h-5 lg:line-clamp-4 lg:min-h-[128px]">Nog geen tekst</p>
 						<div class="mt-10 flex justify-center md:mt-7">
 							<a
 								href="/"
-								class="btn btn-primary !bg-[#e5055b] text-center md:!px-10"
-								>Meer over Wimpers</a
+								class="btn btn-primary border border-pink-medium text-center"
+								> <span class="btn-content md:!px-10">Meer over Wimpers</span></a
 							>
 						</div>
 					</div>
