--- a/src/pages/home.njk
+++ b/src/pages/home.njk
@@ -420,7 +420,7 @@ layout: "layouts/base.html"
 		<div class="flex justify-center sm:justify-end">
 			<a
 				href="/"
-				class="btn btn-secondary mt-3.5 w-full md:w-auto hover:!effect-3d-button-green text-center"
+				class="btn btn-secondary mt-3.5 w-full md:w-auto  text-center"
 				><span class="btn-content !px-12">Bekijk alle behandelingen</span></a
 			>
 		</div>
