--- a/src/pages/about.njk
+++ b/src/pages/about.njk
@@ -5,9 +5,9 @@ layout: "layouts/base.html"
 ---
 
 <div
-	class="relative min-h-[394px] w-full overflow-hidden bg-cover bg-top bg-no-repeat sm:min-h-[440px] md:min-h-[490px] lg:min-h-[550px] xl:min-h-[738px]"
-	style="background-image: url(/assets/img/bg-cta-home.jpg)"
+	class="relative overflow-hidden"
 >
+<img src="/assets/img/bg-cta-home.jpg" class="w-full object-cover object-[50%_8%] h-[394px] sm:h-[440px] md:h-[490px] lg:h-[550px] xl:h-[738px]" alt="">
 	<div class="absolute -bottom-3 left-auto right-0 z-20 w-[125%] sm:w-auto md:-bottom-6 md:left-0 md:right-auto">
 		<img
 			src="/assets/img/section-shape-white.svg"
