--- a/src/pages/home.njk
+++ b/src/pages/home.njk
@@ -45,7 +45,7 @@ layout: "layouts/base.html"
 
 <div class="relative bg-off-white" id="about-section">
 	<div
-		class="absolute bottom-[26rem] left-44 top-auto sm:bottom-auto sm:left-76 sm:top-[37rem] md:left-84 md:top-[34rem] lg:left-0 lg:top-[32rem] xl:top-40 xl:z-20 2xl:left-16 2xl:top-52"
+		class="green-kiss"
 	>
 		<img
 			src="/assets/img/kiss-green.png"
