--- a/src/pages/post.njk
+++ b/src/pages/post.njk
@@ -77,7 +77,7 @@ layout: "layouts/base.html"
 					<a
 						href="/"
 						class="btn btn-primary"
-						><span class="btn-content md:!px-10">
+						><span class="btn-content text-center md:!px-10">
 							Terug naar nieuwsoverzicht
 						</span></a
 					>
